# recognizer

./: CMakeLists.txt  README  recexcept.h  recognizer.cpp  recognizer.h  test.cpp
